--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: 
   flutter_bloc: 
   firebase_database: 
+  cloud_firestore: ^5.4.0
 
 dev_dependencies:
   flutter_test:
